<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.signupActivity">
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/backImage"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_arrow_back_24"/>
        <TextView
            android:id="@+id/sup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/black"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintBottom_toBottomOf="parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_4sdp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_4sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/first_name"
                android:textAllCaps="false"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/fnEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:hint="@string/soujanya"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="@dimen/_13ssp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:text="@string/last_name"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_11ssp"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/lnEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:hint="@string/kolasani"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:text="@string/email"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_11ssp"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:hint="@string/xyz_gmail_com"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:text="@string/password"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_11ssp"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/pswdEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:hint="@string/ps"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:text="@string/confirm_password"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_11ssp"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/cfpEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:hint="@string/cps"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textSize="@dimen/_13ssp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/createButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/create"
            app:layout_constraintTop_toBottomOf="@+id/cardSignUp"/>
  <ProgressBar
      android:id="@+id/createpg"
      android:layout_width="@dimen/_25sdp"
      android:layout_height="@dimen/_25sdp"
      android:layout_gravity="center"
      android:visibility="invisible"/>

  </FrameLayout>
        <TextView
            android:id="@+id/alt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/already_have_an_account"
            android:textAllCaps="false"
            android:textColor="#7B1FA2"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@+id/createButton"
            tools:layout_editor_absoluteX="10dp" />

        <TextView
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="#752D93"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/alt"
            tools:layout_editor_absoluteX="10dp" />
</LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>