<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.signinActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="108dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="65dp"
            android:text="@string/microsoft_teams"
            android:textAllCaps="false"
            android:textColor="#7B1FA2"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardsignin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            app:cardCornerRadius="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/team">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_4sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:text="@string/email"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_15ssp" />

                <EditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:hint="@string/xyz_example_com"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:text="@string/password"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_15ssp" />

                <EditText
                    android:id="@+id/pswdEt"
                    android:layout_width="376dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:hint="@string/u2022_u2022_u2022_u2022_u2022v_u2022_u2022_u2022_u2022"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textSize="@dimen/_13ssp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/signinbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/sign_in"
           app:layout_constraintTop_toBottomOf="@+id/cardsignin"/>
       <ProgressBar
           android:id="@+id/signinpb"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:visibility="invisible"
           app:layout_constraintBottom_toBottomOf="@id/signinbutton"
           app:layout_constraintEnd_toEndOf="@+id/signinbutton"
           app:layout_constraintTop_toTopOf="@id/signinbutton"
           app:layout_constraintStart_toStartOf="@id/signinbutton"/>

        <TextView
            android:id="@+id/na"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/no_account"
            android:textAllCaps="false"
            android:textColor="#7B1FA2"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@+id/signinbutton"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/free"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/create_one_for_free"
            android:textAllCaps="false"
            android:textColor="#752D93"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/na"
            tools:layout_editor_absoluteX="10dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="385dp"
            android:layout_height="151dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/cardsignin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.366"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/team"
            app:layout_constraintVertical_bias="0.285"
            app:srcCompat="@drawable/i" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>